# python-project-140

./: .gitignore  README.md  brain_calc  brain_even  brain_gcd  brain_prime  brain_progression  main.py  makefile  pyproject.toml  sonar-project.properties  test.txt
.qlty/: qlty.toml
brain_games/: calculator.py  calculator_helpers.py  cli.py  constants.py  core.py  even_helpers.py
brain_games/games/: calc.py  cli.py  even.py  gcd.py  prime.py  progression.py
brain_games/matches/: calc.py  even.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_games_example.py  brain_gcd.py  brain_prime.py  brain_progression.py
