[project]
name = "hexlet-code"
version = "0.1.0"
description = "Proyecto de práctica N1"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"