[project]
name = "hexlet-code"
version = "0.1.0"
description = "Proyecto de práctica N1"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games_example:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
